--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,7 @@ tasks:
     init: |
       npm install
     command: |
-      npm run dev
+      npm run serve
 ports:
   - port: 7000
     onOpen: open-preview
