--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,4 @@
+
 tasks:
   - name: Setup
     init: |
@@ -7,3 +8,8 @@ tasks:
 ports:
   - port: 7000
     onOpen: open-preview
+vscode:
+  extensions:
+    - esbenp.prettier-vscode
+    - dbaeumer.vscode-eslint
+    - github.vscode-pull-request-github
