--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "three": "^0.136.0"
   },
   "devDependencies": {
-    "@types/three": "^0.135.0"
+    "@types/three": "^0.135.0",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   }
 }
