--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,8 @@
 
 tasks:
   - name: Setup
-    init: |
-      npm install
-    command: |
-      npm run serve
+    init: npm install
+    command: npm run start
 ports:
   - port: 7000
     onOpen: open-preview
